--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,32 +1,38 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tis Django_Unchained's blog</title>
+        <title>Django Girls blog</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-        <p>Hello World!</p>
-        <p>Welcome to my journey of a thousand types, follow me as I learn web development!</p>
-    </body>
-</html>
-<html>
-    <head>
-        <title> blog</title>
-    </head>
-    <body>
-        <header>
-            <h1><a href="/">Tis Django_Unchained's Blog</a></h1>
+        <<header class="page-header">
+            <div class="container">
+                <h1><a href="/">Tis Django-Unchained's Blog</a></h1>
+            </div>
         </header>
+        <br>
+        <br>
 
-        <header>
-            <h1><a href="/">Django Girls Blog</a></h1>
-        </header>
-        
+
+
+
         {% for post in posts %}
             <article>
-                <time>published: {{ post.published_date }}</time>
-                <h2><a href="">{{ post.title }}</a></h2>
-                <p>{{ post.text|linebreaksbr }}</p>
+                <time>Published: {{ post.published_date }}</time>
+                <h2><a href="">My 1st post</a></h2>
+                <p>Welcome to my journey of a thousand types, follow me as I learn web development</p>
             </article>
         {% endfor %}
+            <br>
+
+
+        <article>
+            <time>Published: {{ post.published_date }}</time>
+            <h2><a href="">My 2nd post</a></h2>
+            <p>Learning to code or development takes a special kind of character. Not only do you need grit but you must be a masochist, with the stack you choose as concurrently your very sadistic Master, your collar and your whip.</p>
+        </article>
+
     </body>
 </html>
